	* drivers/mtd/ftl.c - A FLASH translation layer (FTL) has been implemented.
	  This layer will convert a FLASH MTD interface into a block driver that
	  can be used with any file system.  Good performance of this layer will
	  depend upon functioning write buffer support!
	  NOTE: FTL support is untested as of the initial check-in.
	* Numerous minor changes for m68hc12 to eliminate compilation errors and
	  warnings due to the fact that it uses 16-bit integer types and for casts
	  between uint32 (32-bits) and an mc68hc12 pointer (16-bits).
	* sys/types:  Size of off_t and blkcnt_t should not depend on size of
	  int in the architecture;  Removed non-standard type STATUS
	* include/ - Added header files stdint.h, stdbool.h, cxx/cstdint, and
	  cxx/cstdbool
	* Changed ALL references to non-standard fixed-size types (like uint32,
	  ubyte, etc.) to standard types (like uint32_t, uint8_t, etc.) from
	  stdint.h.  Use type bool and {true, false} from stdbool.  This effected
	  most of the files in the system!  Almost all configurations have been
	  re-built and many have been re-verified in order to get confidence in
	  these changes.
	* graphics/ and examples/nx - Fix numerous build errors that have been
	  introduced lately.  NXGL has suffered some bit-rot from not being used
	  in some of the most recent ports.
	* The misc/pascal NuttX add-on package has been updated to use the new
	  standard types from stdint.h and stdbool.h and re-integrated with NuttX.
	  The released pascal-2.0 will be the first version that contains the
	  compatible changes.
	* arch/arm/src/lm3s/lm3s_ethernet.c - Fixed an important bug in the LM3S
	  ethernet driver:  If full packet is received, the packet-too-big check
	  will fail because it needs to subtract 6 from the packet size (to
	  account for the 2-byte packet length and the 4-byte packet FCS in the
	  FIFO).
	* net/accept.c - Fixed a bad assertion (only happens when debug is enabled).